# veracity-ml

./: .gitignore  Cargo.toml  README.md
test-project/: Cargo.toml
test-project/data/Dataset 1/: testing.csv  validation.csv
test-project/src/: main.rs
veracity-core/: Cargo.toml
veracity-core/src/: lib.rs
veracity-core/src/base/: classifier_base.rs  mod.rs  regressor_base.rs  settings_base.rs
veracity-core/src/enums/: distance_metrics.rs  evaluation_metrics.rs  mod.rs
veracity-core/src/enums/errors/: metric_errors.rs  mod.rs
veracity-core/src/evaluation/: mod.rs
veracity-core/src/evaluation/classification/: accuracy.rs  auprc.rs  auroc.rs  f1.rs  geometric_mean.rs  log_loss.rs  lrap.rs  mod.rs  precision.rs  recall.rs  specificity.rs
veracity-core/src/evaluation/clustering/: calinski_harabasz_index.rs  davies_bouldin_index.rs  dunn_index.rs  mod.rs  silhouette_coefficient.rs
veracity-core/src/evaluation/regression/: adjusted_r2.rs  explained_variance.rs  huber_loss.rs  log_cosh_loss.rs  mae.rs  mape.rs  mbd.rs  mod.rs  mse.rs  msle.rs  quantile_loss.rs  r2.rs  rmse.rs  (+1 more)
veracity-core/src/neighbors/: k_neighbors_classifier.rs  k_neighbors_regressor.rs  k_neighbors_weights.rs  mod.rs
veracity-core/src/utility/: distance.rs
veracity-data/: Cargo.toml
veracity-data/src/: data_matrix.rs  data_vector.rs  lib.rs
veracity-data/src/data_loader/: csv_loader.rs  data_loader_settings.rs  data_types.rs  mod.rs
veracity-data/src/enums/: error_types.rs  mod.rs
veracity-dl/: Cargo.toml
veracity-types/: Cargo.toml
veracity-types/src/: errors.rs
