[package]
name = "test-project"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
criterion = "0.5.1"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
veracity-core = { path = "../veracity-core" }
veracity-data = { path = "../veracity-data" }
polars = { git = "https://github.com/pola-rs/polars" }
